# university-manager-tui

./: .gitignore  README.md  app.py  data_manager.py  models.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml
